build_errors.txt
In file included from /usr/include/x86_64-linux-gnu/qt5/QtGui/qtguiglobal.h:43,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qtwidgetsglobal.h:43,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qmainwindow.h:43,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QMainWindow:1,
                 from mainwindow.h:4,
                 from mainwindow.cpp:1:
/usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h: In instantiation of ‘static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) [with Func1 = void (QCustomPlot::*)(QCPAbstractPlottable*, int, QMouseEvent*); Func2 = void (MainWindow::*)(QCPBars*, QMouseEvent*); typename QtPrivate::FunctionPointer<Func>::Object = QCustomPlot; typename QtPrivate::FunctionPointer<Func2>::Object = MainWindow]’:
mainwindow.cpp:28:12:   required from here
/usr/include/x86_64-linux-gnu/qt5/QtCore/qglobal.h:121:63: error: static assertion failed: Signal and slot arguments are not compatible.
  121 | #  define Q_STATIC_ASSERT_X(Condition, Message) static_assert(bool(Condition), Message)
      |                                                               ^~~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:255:9: note: in expansion of macro ‘Q_STATIC_ASSERT_X’
  255 |         Q_STATIC_ASSERT_X((QtPrivate::CheckCompatibleArguments<typename SignalType::Arguments, typename SlotType::Arguments>::value),
      |         ^~~~~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtCore/qglobal.h:121:63: note: ‘(((int)QtPrivate::CheckCompatibleArguments<QtPrivate::List<QCPAbstractPlottable*, int, QMouseEvent*>, QtPrivate::List<QCPBars*, QMouseEvent*> >::value) != 0)’ evaluates to false
  121 | #  define Q_STATIC_ASSERT_X(Condition, Message) static_assert(bool(Condition), Message)
      |                                                               ^~~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:255:9: note: in expansion of macro ‘Q_STATIC_ASSERT_X’
  255 |         Q_STATIC_ASSERT_X((QtPrivate::CheckCompatibleArguments<typename SignalType::Arguments, typename SlotType::Arguments>::value),
      |         ^~~~~~~~~~~~~~~~~
make: *** [Makefile:425: mainwindow.o] Ошибка 1
